apps/flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: tiangolo/uwsgi-nginx-flask:python3.8
          ports:
            - containerPort: 80
