apps/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
