apps/flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
spec:
  rules:
  - host: flask-app.miusuario.duckdns.org  # Aquí defines el subdominio para acceder
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask  # Nombre de tu servicio de Flask en Kubernetes
            port:
              number: 80  # El puerto donde está expuesto el servicio de Flask
